--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
           <div class="col-md-10 ftco-animate text-center" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"<strong>Luzon District Youth Camp 2020</strong></h1>
-            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="index1.html" class="btn btn-primary btn-outline-white px-4 py-3">Register Now</a></p>
+            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="signup.html" class="btn btn-primary btn-outline-white px-4 py-3">Register Now</a></p>
           </div>
         </div>
       </div>
