--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
+		    	<img src="logo.png" height="50px" width="50px" class="flaticon.css">
 	      <a class="navbar-brand" href="index.html"><i class="flaticon-cross"></i> <span>ALJC-LUZON</span> <span>APOSTOLIC CRUSADERS</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
@@ -38,8 +39,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="events.html" class="nav-link">Announcements</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">Mission And Vision</a></li>
 	        </ul>
 	      </div>
 	    </div>
