--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><i class="flaticon-cross"></i> <span>ALJC-LUZON</span> <span>APOSTOLIC CRUSADERS</span></a>
+	<img src="logo.png" height="50px" width="50px" class="flaticon.css">
+	      <a class="navbar-brand" href="index.html"></i> <span>ALJC-LUZON</span> <span>APOSTOLIC CRUSADERS</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
